--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@prismicio/react": "^3.2.1",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,6 +27,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "slice-machine-ui": "^2.16.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-plugin-glsl": "^1.3.1"
   }
 }
