--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
-    "@prismicio/client": "^7.17.2",
+    "@prismicio/client": "^7.17.3",
+    "@prismicio/helpers": "^2.3.9",
     "@prismicio/next": "^2.0.1",
     "@prismicio/react": "^3.2.1",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.515.0",
     "next": "15.3.2",
     "react": "^19.0.0",
