--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prismicio/helpers": "^2.3.9",
     "@prismicio/next": "^2.0.1",
     "@prismicio/react": "^3.2.1",
+    "@vfx-js/core": "^0.7.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.515.0",
     "next": "15.3.2",
